--- a/app/src/main/res/layout/row_main.xml
+++ b/app/src/main/res/layout/row_main.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="300dp">
+    android:layout_height="wrap_content">
 
 
     <ImageView
         android:id="@+id/image_row"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="300dp"
         android:src="@mipmap/ic_launcher"
         android:scaleType="centerCrop"/>
 
@@ -19,8 +18,10 @@
         android:id="@+id/title_row"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#000"
+        android:background="#77000000"
         android:padding="16dp"
+        android:singleLine="true"
         android:text="Title"
-        android:textColor="#fff" />
-</LinearLayout>
+        android:textColor="#fff"
+        android:layout_gravity="bottom"/>
+</FrameLayout>
